Actualizaciones en el Encriptador

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div id="derecha" class="parte-derecha ajustar">
                 <img id="munieco" class="munieco" src="./imagenes/Muñeco.svg" alt="muñeco">
-                <textarea id="mensajeFinal" class="mensaje-final" placeholder="Ningún mensaje fue encontrado"></textarea>
+                <textarea id="mensajeFinal" class="mensaje-final" placeholder="Ningún mensaje fue encontrado" readonly></textarea>
                 <p id="infoDerecha" class="info-derecha">Ingresa el texto que deseas encriptar o desencriptar.</p>
                 <button id="botonCopiar" class="btn-copiar oculto">Copiar</button>
             </div>
