Pie de pagina con mi nombre

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
             </div>
         </section>
     </main>
-    <!-- <footer></footer> -->
+    <footer>
+        <p>Hecho por <a href="#">Nicolás Adrián Tomadín</a></p>
+        <p class="copyright">&#169; 2024 Todos los derechos reservados</p>
+    </footer>
 </body>
 <script src="app.js"></script>
 </html>
